AC_PREREQ([2.59])

AC_INIT([indicor], [0.1], [astrorafael@yahoo.es])
AC_CONFIG_AUX_DIR([config])
dnl AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.9])

AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile \
common/Makefile \
log/Makefile \
resources/Makefile \
items/Makefile \
driver/Makefile \
factory/Makefile])

AC_OUTPUT
